[gd_scene load_steps=4 format=3 uid="uid://bbbifcc62u1bw"]

[ext_resource type="Script" path="res://scripts/Main_Menu.gd" id="1_ma3ub"]
[ext_resource type="PackedScene" uid="uid://wx63s0ujafpd" path="res://scenes/settings.tscn" id="2_jnl31"]
[ext_resource type="Texture2D" uid="uid://b6ovv3d5ub77t" path="res://assets/Backgrouds_and_extra/Sabina_looking_into_the_sky.png" id="2_tvdmc"]

[node name="Main_Menu" type="Node2D"]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="Main_Menu" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ma3ub")

[node name="Sprite2D" type="Sprite2D" parent="UILayer/Main_Menu"]
position = Vector2(960, 540)
texture = ExtResource("2_tvdmc")

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/Main_Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -288.5
offset_top = -144.0
offset_right = 288.5
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UILayer/Main_Menu/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "A game that is very cool"
horizontal_alignment = 1

[node name="Start" type="Button" parent="UILayer/Main_Menu/VBoxContainer"]
custom_minimum_size = Vector2(150, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Exit")
focus_neighbor_bottom = NodePath("../Option")
theme_override_font_sizes/font_size = 24
text = "Start Game"

[node name="Option" type="Button" parent="UILayer/Main_Menu/VBoxContainer"]
custom_minimum_size = Vector2(150, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Start")
focus_neighbor_bottom = NodePath("../Exit")
theme_override_font_sizes/font_size = 24
text = "Settings"

[node name="Exit" type="Button" parent="UILayer/Main_Menu/VBoxContainer"]
custom_minimum_size = Vector2(150, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Option")
focus_neighbor_bottom = NodePath("../Start")
theme_override_font_sizes/font_size = 24
text = "Exit Game"

[node name="Settings" parent="UILayer" node_paths=PackedStringArray("pre_scene") instance=ExtResource("2_jnl31")]
visible = false
pre_scene = NodePath("../Main_Menu")

[connection signal="pressed" from="UILayer/Main_Menu/VBoxContainer/Start" to="UILayer/Main_Menu" method="_on_start_pressed"]
[connection signal="pressed" from="UILayer/Main_Menu/VBoxContainer/Option" to="UILayer/Main_Menu" method="_on_option_pressed"]
[connection signal="pressed" from="UILayer/Main_Menu/VBoxContainer/Exit" to="UILayer/Main_Menu" method="_on_exit_pressed"]
